{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Game",
            "id": "bafda1ff-7bf7-4eec-9b98-353e87357bd3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a592e460-fe03-4f19-98b4-37278ac90f32",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnKey",
                    "type": "Button",
                    "id": "5690050b-97e4-4738-baca-3142029c29c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnPad",
                    "type": "Button",
                    "id": "1441fd5e-e9b9-492d-ad81-0c5443189d22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72f15b0c-bb60-45c6-8f36-62d4f4586240",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "7666b511-ad0a-49c0-a10a-6654e8bee485",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7cd69da7-e740-47fb-8656-df1b89ac8c29",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "039ecb48-2d91-4b25-a515-27e4e4fe55bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "53d54509-3e3c-47fb-85b0-780471bbc997",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aa02f0d8-19b4-429b-8a97-8df29da73510",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b21ec3a7-810c-4080-bca9-1d58f28744ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TurnKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamePad",
                    "id": "e4153a40-effd-4c95-8ca8-90b5a03635c7",
                    "path": "1DAxis(whichSideWins=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnPad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "257d5a5a-c801-4f6c-b6ac-31dacaef14eb",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TurnPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "e9754190-4c67-4fe6-b469-174134b5145e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TurnPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}